RESOLVED FIXED292062
Contenteditable div within iframe does not scroll into viewport on receiving focus for the second time.
https://bugs.webkit.org/show_bug.cgi?id=292062
Summary Contenteditable div within iframe does not scroll into viewport on receiving ...
michal.nieruchalski
Reported 2025-04-25 07:49:43 PDT
Created attachment 475047 [details] Video demonstrating the bug. Contentedtiable div within iframe scrolls into viewport on receiving focus through keyboard tab key, but only for the first time. If I scroll up again, and press tab key, the focus will be moved to the contenteditable div, but it won’t be scrolled into viewport. See the video attached. Steps to Reproduce: ``` <!DOCTYPE html> <html> <head></head> <body> <input type="text" /> <div style="height: 2000px;"></div> <iframe srcdoc="<div contenteditable=true></div>"></iframe> </body> </html> ``` 1. Create html file using the template provided above and open it using Safari browser. 2. Focus on the first input on the page 3. Press Tab key 4. Notice you have been scrolled to the contenteditable element 5. Scroll back up and focus on the first input on the page again 6. Press Tab key Actual Results: You have not been scrolled to the contenteditable element, even though it has focus. Expected Results: You should have been scrolled to the contenteditable element. Additional information: This bug is affecting Rich Text Editors such as TinyMCE. This bug is not present on Mozilla Firefox browser. It only happens if the contenteditable div is inside the iframe
Attachments
Video demonstrating the bug. (3.37 MB, video/quicktime)
2025-04-25 07:49 PDT, michal.nieruchalski
no flags
test case (196 bytes, text/html)
2025-04-25 08:53 PDT, Alexey Proskuryakov
no flags
Alexey Proskuryakov
Comment 1 2025-04-25 08:53:31 PDT
Created attachment 475048 [details] test case Same test as an attachment.
Alexey Proskuryakov
Comment 2 2025-04-25 08:55:11 PDT
Curiously, the same doesn't happen with an input in an iframe, just with a contenteditable div.
Radar WebKit Bug Importer
Comment 3 2025-05-02 07:50:19 PDT
Ahmad Saleem
Comment 4 2025-06-21 04:29:30 PDT
EWS
Comment 5 2025-06-23 10:42:10 PDT
Committed 296523@main (894c1182b3fa): <https://commits.webkit.org/296523@main> Reviewed commits have been landed. Closing PR #47018 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.