Fix editable element in an iframe doesn't scroll into view on second focusing https://bugs.webkit.org/show_bug.cgi?id=292062 rdar://150521759

Reviewed by Simon Fraser.

Merge: https://source.chromium.org/chromium/chromium/src/+/6ddd475c4898322459bcc843a175b72f0b975994

When focusing an editable element in an iframe, scrolling into view
cannot be called if it already contains a selection. This patch adds the
call for this case.

* Source/WebCore/dom/Element.cpp:
(WebCore::Element::updateFocusAppearance):
* LayoutTests/imported/w3c/web-platform-tests/focus/focus-contenteditable-element-in-iframe-scroll-into-view-expected.txt: Progression

Canonical link: https://commits.webkit.org/296523@main